--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EventHandlerInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
