--- a/framework/framework.vcxproj
+++ b/framework/framework.vcxproj
@@ -74,6 +74,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CprNumber.h" />
     <ClInclude Include="DemuxTable.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="EventHandlerInterface.h" />
@@ -86,6 +87,7 @@
     <ClInclude Include="IReactor.h" />
     <ClInclude Include="NetworkEvent.h" />
     <ClInclude Include="NetworkHandle.h" />
+    <ClInclude Include="Patient.h" />
     <ClInclude Include="Reactor.h" />
     <ClInclude Include="SOCK_Acceptor.h" />
     <ClInclude Include="SOCK_Connector.h" />
@@ -96,6 +98,7 @@
     <ClInclude Include="SynchronousEventDemultiplexerStub.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CprNumber.cpp" />
     <ClCompile Include="DemuxTable.cpp" />
     <ClCompile Include="HandleSock.cpp" />
     <ClCompile Include="HandleStub.cpp" />
@@ -103,6 +106,7 @@
     <ClCompile Include="IReactor.cpp" />
     <ClCompile Include="NetworkEvent.cpp" />
     <ClCompile Include="NetworkHandle.cpp" />
+    <ClCompile Include="Patient.cpp" />
     <ClCompile Include="Reactor.cpp" />
     <ClCompile Include="SOCK_Acceptor.cpp" />
     <ClCompile Include="SOCK_Connector.cpp" />
