--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClInclude Include="IConnector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CprNumber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Patient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemuxTable.cpp">
@@ -120,6 +126,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SynchronousEventDemultiplexerStub.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CprNumber.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Patient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
