--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -81,14 +81,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Acceptor.h" />
-    <ClInclude Include="PatientInformationService.h" />
+    <ClInclude Include="PatientDatabase.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Acceptor.cpp" />
-    <ClCompile Include="PatientInformationService.cpp" />
+    <ClCompile Include="PatientDatabase.cpp" />
     <ClCompile Include="server.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
