--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Connector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PatientService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Connector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PatientService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
