--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClInclude Include="Acceptor.h" />
     <ClInclude Include="PatientDatabase.h" />
+    <ClInclude Include="ReadFromDatabaseEvent.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -89,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="Acceptor.cpp" />
     <ClCompile Include="PatientDatabase.cpp" />
+    <ClCompile Include="ReadFromDatabaseEvent.cpp" />
     <ClCompile Include="server.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
